# otus-projects

./: .gitignore  .travis.yml
Homework1/: .gitignore  .travis.yml  CMakeLists.txt  main.cpp
